# search-project

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
search_project/etc/: ld.so.cache  shadow
search_project/etc/apt/sources.list.d/: debian.sources
search_project/var/cache/ldconfig/: aux-cache
search_project/var/lib/apt/lists/: deb.debian.org_debian-security_dists_bookworm-security_InRelease  deb.debian.org_debian-security_dists_bookworm-security_main_binary-amd64_Packages.lz4  deb.debian.org_debian_dists_bookworm-updates_InRelease
search_project/var/lib/dpkg/: status  status-old
search_project/var/log/apt/: eipp.log.xz
src/: api_tests.rs  index.html  main.rs
tests/: api_tests.rs
