[package]
name = "lil_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
reqwest = { version = "0.12.15", features = ["stream", "json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
